[package]
name = "dx-serializer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["DX Team"]
description = "Ultra-efficient DX Machine serialization format - 65%+ more efficient than TOON"
license = "MIT"

[dependencies]
# Zero-copy parsing
bytemuck = { version = "1.14", features = ["derive"] }
bytes = "1.5"

# Fast hashing for aliases and anchors
rustc-hash = "1.1"

# SIMD-accelerated operations
memchr = "2.7"

# Error handling
thiserror = "1.0"

# Optional: For serde integration
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[features]
default = []
serde-support = ["serde"]

[[bench]]
name = "dx_vs_toon"
harness = false

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
