[package]
name = "dx-stack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language-aware development stack abstraction for DX"
keywords = ["stack", "runtime", "bundler", "package-manager", "test-runner"]
categories = ["development-tools"]

[lib]
name = "dx_stack"
path = "src/lib.rs"

[dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
bitflags = "2.6"

[dev-dependencies]
tempfile = "3.12"
