[package]
name = "dx-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Realtime binary WebSocket protocol"

[lib]
path = "src/lib.rs"

[dependencies]
bincode = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.0"
flume = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1.35", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"

[features]
default = []
client = []

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

