[package]
name = "dx-www-interaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "User action preservation"

[lib]
path = "src/lib.rs"

[dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlInputElement", "Selection", "Window"] }
