[package]
name = "dx-www-serializer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["DX Runtime Team <dev@dx-www.com>"]
description = "The world's most token-efficient serialization format"
repository = "https://github.com/dx-www/dx-serializer"
documentation = "https://docs.rs/dx-serializer"
keywords = ["serialization", "parser", "format", "performance", "zero-copy"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"
license = "MIT"

[lib]
name = "dx_www_serializer"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.18", features = ["derive"] }
bytes = "1.5"
rustc-hash = "1.1"
memchr = "2.7"
thiserror = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["converters"]
converters = ["serde", "serde_json", "serde_yaml", "toml"]

[[bench]]
name = "dx_vs_toon"
harness = false
