[package]
name = "dx-www"
version = "0.1.0"
edition = "2021"
authors = ["Dx-WWW Team"]
description = "The Transpiler-to-Binary Pipeline - Converts .tsx to .dxb and .wasm"
license = "MIT OR Apache-2.0"

[lib]
name = "dx_compiler"
path = "src/lib.rs"

[features]
default = []
oxc = ["oxc_parser", "oxc_allocator", "oxc_ast", "oxc_span"]

[dependencies]
# CLI & Terminal
clap = { version = "4.5", features = ["derive", "cargo"] }
console = "0.15"
indicatif = "0.17"  # Loading bars

# Parsing (The Heavy Lifting)
regex = "1.10"

# OXC Parser (optional - fastest JS/TS parser)
oxc_parser = { version = "0.49", optional = true }
oxc_allocator = { version = "0.49", optional = true }
oxc_ast = { version = "0.49", optional = true }
oxc_span = { version = "0.49", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.0-rc.3"
flate2 = "1.0" # For Gzipping templates

# Code Generation
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

# Async/System
tokio = { version = "1.36", features = ["full"] }
notify = "6.1" # File watching
anyhow = "1.0"
thiserror = "1.0"

# Path handling
pathdiff = "0.2"
walkdir = "2.4"

# Hashing for cache invalidation
blake3 = "1.5"

# Datetime for metadata
chrono = "0.4"

# Internal
dx-packet = { path = "../packet", features = ["std"] }

# Ecosystem crates (compile-time features)
dx-form = { path = "../dx-form" }
dx-query = { path = "../dx-query" }
dx-db = { path = "../dx-db" }
dx-state = { path = "../dx-state" }
dx-a11y = { path = "../dx-a11y" }
dx-print = { path = "../dx-print" }
dx-rtl = { path = "../dx-rtl"}


[dev-dependencies]
# tempfile = "3.8"
