[package]
name = "dx-icon"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance icon library with FlatBuffers-based binary format"
license.workspace = true
repository.workspace = true
keywords = ["icons", "svg", "flatbuffers", "binary", "assets"]
categories = ["development-tools", "multimedia", "encoding"]

[dependencies]
flatbuffers = "24.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36"
walkdir = "2.4"
regex = "1.12.2"

[build-dependencies]
flatc-rust = "0.2"
flatbuffers = "24.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36"
walkdir = "2.4"
regex = "1.12.2"
